<resources>
    <string name="app_name">Quit Smoking</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="Username">Email ID</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="query_search">Search Query</string>
    <string name="logout">Logout</string>


    <string name="app_description">A modern, smart and focused virtual environment built for the learners of today, developers of tomorrow.</string>
    <string name="get_started">GET STARTED</string>
    <string name="check">Correct</string>
    <string name="clear">Clear</string>

    <string name="prompt_email">Email ID</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The passwords does not match or length of password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_invalid">Must be greater than 0</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="finish">Finish</string>
    <string name="upload">Upload</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter_query">Filter Query</string>
    <string name="query_new">Create New Query</string>
    <string name="query_title">Title</string>
    <string name="query_text">Detail</string>
    <string name="post_query">Post Query</string>
    <string name="profile">Profile</string>
    <string name="avatar">Avatar</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="record_voice">Record Voice</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="send_message">Send Message</string>
    <string name="receive_message">Receive Message</string>
    <string name="add_contact_yes_text">Yes</string>
    <string name="add_contact_no_text">No</string>
    <string name="new_chat">New Chat</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="course_search">Search Course</string>
    <string name="project_search">Search Project</string>
    <string name="title_activity_course_detail">Course</string>

    <string name="enroll_now">ENROLL NOW</string>
    <string name="record_detail">Record Detail</string>
    <string name="record_title">Record Title</string>
    <string name="search_hint">Search</string>

    <string name="hello_blank_fragment">Work in Progrees\n Feature to be released shortly!!</string>
    <string name="prompt_bio">Bio</string>
    <string name="referral_code">Referral Code</string>
    <string name="prompt_dob">Date Of Birth</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="error_invalid_bio">Bio must be at least 100 characters.</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="personality_test">Personality Test</string>
    <string name="prerequisite">Prerequisite</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="duration">Duration</string>
    <string name="course_content">Course Content</string>
    <string name="course_tags">Tags</string>
    <string name="github_sign_in">Github Sign In</string>
    <string name="linkedin_sign_in">LinkedIn Sign In</string>
    <string name="stack_overflow_sign_in">Stack Overflow Sign In</string>
    <string name="take_test">Take Test</string>
    <string name="personality_test_successful">Personality Test Completed Successfully.</string>
    <string name="personality_test_failed">Personality Test Completion Failed.</string>
    <string name="test_successful">Test Completed Successfully.</string>
    <string name="test_failed">Test Completion Failed.</string>

    <string name="title_activity_lesson_file">Lesson</string>
    <string name="dashboard">Dashboard</string>
    <string name="courses">Courses</string>
    <string name="projects">Projects</string>
    <string name="forum">Forum</string>
    <string name="payment_history">Payments</string>
    <string name="user">User</string>
    <string name="no_chats">No Chats</string>
    <string name="no_contacts">No Contacts</string>
    <string name="answers">Answers</string>
    <string name="take_verbal_ability_test">Take Verbal Ability Test</string>
    <string name="take_personality_test">Take Personality Test</string>
    <string name="not_enrolled">You are currently not enrolled in any course.</string>
    <string name="activities">Activities</string>
    <string name="download_project_file">Download Project File</string>
    <string name="upload_project_submission">Upload Project Submission</string>
    <string name="exams">Exams</string>
    <string name="download_exam_file">Download Exam File</string>
    <string name="upload_exam_submission">Upload Exam Submission</string>
    <string name="preferred_mentee_count">Preferred Mentee Count</string>
    <string name="add_skills">Add Skills</string>
    <string name="see_queries">See Queries</string>

    <string name="admob_id">ca-app-pub-6092472960533758~3920611447</string>
    <string name="interstitial_ads_id">ca-app-pub-6092472960533758/7600002002</string>
    <string name="interstitial_ads_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_sub_mentor_navigation">SubMentorNavigationActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="share_referral">Share the app using the referral code below and avail amazing benefits:</string>
    <string name="referral_hub">Referral Hub</string>
    <string name="your_free_videos">Your Free Videos!!</string>
    <string name="associate_mentors">Associate Mentors</string>
    <string name="approve">Approve</string>
    <string name="terms">Terms and Conditions</string>
</resources>
