<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--<ProgressBar-->
    <!--android:id="@+id/sign_up_progressBar"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="gone" />-->

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/first_name_textView"
                    android:nextFocusForward="@id/first_name_textView"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/first_name_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/last_name_textView"
                    android:nextFocusForward="@id/last_name_textView"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/last_name_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusDown="@id/email_textView"
                    android:nextFocusForward="@id/email_textView"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/password_editText"
                    android:nextFocusForward="@id/password_editText"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusDown="@id/confirm_password_editText"
                    android:nextFocusForward="@id/confirm_password_editText"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/bio_editText"
                    android:nextFocusForward="@id/bio_editText"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bio_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_bio"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text|textMultiLine|textAutoCorrect"
                    android:ems="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" >-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
            <!--android:id="@+id/date_of_birth_editText"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/prompt_dob"-->
            <!--android:imeActionLabel="@string/action_sign_up"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:ems="10"-->
            <!--android:maxLines="1"-->
            <!--android:singleLine="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_toLeftOf="@+id/date_of_birth_Button"-->
            <!--android:layout_toStartOf="@+id/date_of_birth_Button"-->
            <!--android:minLines="1"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:paddingRight="5dp"-->
            <!--android:layout_marginLeft="3dp"-->
            <!--android:layout_marginStart="3dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:layout_marginEnd="30dp" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<Button-->
            <!--android:id="@+id/date_of_birth_Button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="@string/prompt_dob"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:textColor="@color/white"-->
            <!--android:paddingLeft="15dp"-->
            <!--android:paddingRight="15dp" />-->

            <!--</RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="55dp">

                <ImageView
                    android:id="@+id/uploaded_imageView"
                    android:layout_width="@dimen/item_width"
                    android:layout_height="@dimen/item_width"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/upload_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_profile_picture"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingRight="15dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Next"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>